--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');
 
-• {
+* {
     margin: 0;
     padding: 0;
     border: none;
@@ -26,10 +26,12 @@ h1, h2, h3 {
     color: #615055;
 }
 
+
+
 #header {
     font: 1em sans-serif;
     color: #615055;
-    background-color: white;
+    background-color: #DDF8E8;
 
 }
 
@@ -111,13 +113,14 @@ h1, h2, h3 {
 }
     
 
-#skills {
+#skills-box {
+    display: inline-block;
+    text-align: center;
+    padding-top: 50px;
     width: 100%;
     height: 600px;
     background-color: cadetblue;
-    contain: content;
-
-
+    
 }
 
 
@@ -157,6 +160,11 @@ h1, h2, h3 {
     text-align: center;
 }
 
+.skill-text {
+    align-items: center;
+    padding: 100px;
+}
+
 hr{
     border-top: 1px solid rgb(114, 187, 114);
     width: 80%;
@@ -172,6 +180,15 @@ hr{
     text-align: center;
 }
 
+#about-text {
+    padding: 200px;
+}
+
+#about li {
+    list-style: none;
+    line-height: 30px;
+}
+
 #form {
     width: 100%;
     height: 400px;
@@ -183,10 +200,7 @@ hr{
 
 .form-div {
     width: 50%;
-    height: 200px;
-
-
-
+    height: 600px;
 }
 
 input[type=text], select {
@@ -217,3 +231,66 @@ input[type=date], select {
     border-radius: 4px;
     box-sizing: border-box;
 }
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+.fa:hover {
+    opacity: 0.7;
+  }
+
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+
+  .fa-instagram {
+    background: #3f729b;
+    color: white;
+  }
+
+  #social-links {
+
+
+
+  }
+
+  #footer-div {
+      position: relative;
+      bottom: 0;
+      background-color: #DDF8E8;
+      height: 200px;
+      width: 100%;
+      vertical-align: middle;
+      text-align: center;
+      padding: 20px;
+      margin: 0 auto;
+      bottom: 0;
+      left: 0;
+
+
+  }
+
+  .contact {
+      padding: 15px;
+      line-height: 35px;
+      
+
+  }
+
+  .contact p {
+      text-size-adjust: 15px;
+  }
+
+  .contact a {
+      text-decoration: none;
+  }
