--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 body {
     font-family: montserrat, sans-serif;
     font-weight: 300px;
-    color: #B4A6AB;
+    color: #4B3742;
 }
 
 h1, h2, h3 {
@@ -21,8 +21,9 @@ h1, h2, h3 {
 
 #logo {
     float: left;
-    font-size: 300%;
+    font-size: 225%;
     margin-right: 25px;
+    padding-left: 25px;
     color: #615055;
 }
 
@@ -31,7 +32,7 @@ h1, h2, h3 {
 #header {
     font: 1em sans-serif;
     color: #615055;
-    background-color: #DDF8E8;
+    background-color: #b4a6ab;
 
 }
 
@@ -44,6 +45,7 @@ h1, h2, h3 {
 #menu-bar a {
     text-decoration: none;
     color: inherit;
+    line-height: 50px;
 }
 
 #menu-bar li {
@@ -66,7 +68,7 @@ h1, h2, h3 {
     width: 100%;
     overflow: hidden;
     position: relative;
-    background-color: cornflowerblue;
+    background-color: rgb(202, 202, 202);
 }
 
 #hero-text, #hero-text h1, h2 {
@@ -80,6 +82,11 @@ h1, h2, h3 {
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0.5;
 }
 
 @keyframes hero-zoom {
@@ -92,36 +99,36 @@ h1, h2, h3 {
 }
 
 #hero-text {
-    font-size: 130%;
-    font-family: open-sans, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 4px;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 80%;
-    height: 500px;
-    text-align: center;
-    background-color: #000;
-    filter: alpha(opacity=50);
-    -moz-opacity: 0.5;
-    opacity: 0.5;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
 }
 
 #hero-text h1, h2 {
     color: #615055;
+    font-size: 150%;
 }
-    
 
 #skills-box {
     display: inline-block;
-    text-align: center;
     padding-top: 50px;
     width: 100%;
     height: 600px;
-    background-color: cadetblue;
+    background-color: #CDD5D1;
+    text-align: center;
+    
     
 }
+
+/* #overlay {
+    background-color: #e0e5e2;
+    opacity: 0.6;
+    width: 100%;
+    height: 400px;
+    z-index: 2;
+} */
 
 
 .left-skill {
@@ -129,24 +136,19 @@ h1, h2, h3 {
     width: 33%;
     float: left;
     background-image: url('../images/sports.jpg');
-    background-size: contain;
+    background-size: cover;
     height: 400px;
     text-align: center;
-   
-    
 }
 
 .right-skill {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-image: url('../images/portrait.jpg');
-    height: 400px;
-    background-size: contain;
+    background-image: url('../images/portrait1.jpg');
+    background-size: cover;
     height: 400px;
     text-align: center;
-    
-
 }
 
 .center-skill {
@@ -155,81 +157,66 @@ h1, h2, h3 {
     margin: 0 auto;
     background-image: url('../images/wildlife.jpg');
     height: 400px;
-    background-size: contain;
-    height: 400px;
+    background-size: cover;
     text-align: center;
 }
 
-.skill-text {
-    align-items: center;
-    padding: 100px;
-}
-
-hr{
-    border-top: 1px solid rgb(114, 187, 114);
-    width: 80%;
-    margin: 5px;
-    
-
-}
 
 #about {
     width: 100%;
     height: 600px;
-    background-color: darkblue;
+    background-color: #b4a6ab;
     text-align: center;
 }
 
-#about-text {
-    padding: 200px;
+#about-div {
+    padding: 100px;
+    text-align: center;
 }
 
-#about li {
+#about-div li {
     list-style: none;
-    line-height: 30px;
+    line-height: 50px;
 }
 
-#form {
+.signupsec {
     width: 100%;
-    height: 400px;
-    background-color: rgb(247, 189, 0);
-    text-align: center; 
-    
-
-}
-
-.form-div {
-    width: 50%;
     height: 600px;
+    background-color: #CDD5D1;
+    text-align: center; 
+    padding-top: 50px;
 }
 
-input[type=text], select {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+#signup {
+    vertical-align: middle;
+    
+}
+.signupsec {
+    
 }
 
-input[type=email] {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+.signupbtn {
+    background-color: #E0E5E2;
+    color: #615055;
+    padding: 20px 30px;
+    margin: 10px 0;
+    border: black;
+    width: 30%;
+    opacity: 0.7;
 }
-input[type=date], select {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+
+.signupbtn:hover {
+    opacity: 1;
+}
+
+input[type=text], input[type=email] {
+    width: 30%;
+    padding: 25px;
+    margin: 5px 0 20px 0;
+    display: inline-block;
+    border: 1px solid black;
+    background-color: rgb(245, 245, 245);
+    text-align: center;
 }
 
 .fa {
@@ -258,16 +245,14 @@ input[type=date], select {
     color: white;
   }
 
-  #social-links {
-
-
-
+  .footer {
+    overflow: hidden;
   }
 
   #footer-div {
       position: relative;
       bottom: 0;
-      background-color: #DDF8E8;
+      background-color: #B4A6AB;
       height: 200px;
       width: 100%;
       vertical-align: middle;
@@ -291,6 +276,11 @@ input[type=date], select {
       text-size-adjust: 15px;
   }
 
-  .contact a {
-      text-decoration: none;
-  }
+  .footer a {
+    text-decoration: none;
+    color: #615055;
+}
+
+.footer a:hover {
+    color: #4B3742;
+}
