--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,55 +112,29 @@ h1, h2, h3 {
 }
 
 #skills-box {
-    display: inline-block;
+    display: block;
     padding-top: 50px;
     width: 100%;
-    height: 600px;
+    height: 500px;
     background-color: #CDD5D1;
-    text-align: center;
-    
-    
 }
 
-/* #overlay {
-    background-color: #e0e5e2;
-    opacity: 0.6;
-    width: 100%;
-    height: 400px;
-    z-index: 2;
-} */
-
-
-.left-skill {
+#skills-box h1 {
+    text-align: center;
     padding-top: 30px;
-    width: 33%;
-    float: left;
-    background-image: url('../images/sports.jpg');
-    background-size: cover;
-    height: 400px;
-    text-align: center;
+    padding-bottom: 25px;
+    font-size: x-large;
 }
 
-.right-skill {
+#skills-box h2 {
+    text-align: center;
     padding-top: 30px;
-    width: 33%;
-    float: right;
-    background-image: url('../images/portrait1.jpg');
-    background-size: cover;
-    height: 400px;
-    text-align: center;
 }
 
-.center-skill {
-    padding-top: 30px;
-    width: 33%;
-    margin: 0 auto;
-    background-image: url('../images/wildlife.jpg');
-    height: 400px;
-    background-size: cover;
+#skills-box p {
     text-align: center;
+    padding-top: 30px;  
 }
-
 
 #about {
     width: 100%;
@@ -201,7 +175,7 @@ h1, h2, h3 {
     padding: 20px 30px;
     margin: 10px 0;
     border: black;
-    width: 30%;
+    width: 20%;
     opacity: 0.7;
 }
 
