--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,15 @@
     border: none;
 }
 
+html,body {
+    height:100%;
+}
+
+body>footer {
+    position: sticky;
+    top: 100vh;
+}
+
 body {
     font-family: 'montserrat', sans-serif;
     font-weight: 300;
@@ -19,7 +28,7 @@ h1, h2, h3 {
     text-transform: uppercase;
     letter-spacing: 3px;
     font-weight: 400;
-    color: #615055;
+    color: #150409;
 }
 
 /* Logo css with header and menu bar information */
@@ -179,8 +188,8 @@ h1, h2, h3 {
     clear: both;
     column-count: 4;
     column-gap: 0;
-    display: flex;
-    width: 100%;
+    /* display: flex;
+    width: 100%; */
     height: auto;
 }
 
@@ -194,6 +203,8 @@ h1, h2, h3 {
 
 .gallery {
     border: 1px solid #ccc;
+    position: relative;
+
 }
   
 .gallery:hover {
@@ -201,12 +212,19 @@ h1, h2, h3 {
 }
   
 .gallery img {
-    width: 20%;
+    width: 100%;
     height: auto;
 }
   
 .desc {
     padding: 15px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    color: black;
+    font-weight: bold;
+    background: rgba(255,255,255,0.5);
+    width: 100%;
     text-align: center;
 }
   
@@ -216,8 +234,8 @@ h1, h2, h3 {
   
 .responsive {
     padding: 0 6px;
-    float: left;
-    width: 24.99999%;
+    /* float: left;
+    width: 24.99999%; */
 }
   
 @media only screen and (max-width: 700px) {
@@ -309,14 +327,14 @@ input[type=text], input[type=email] {
 /* Footer Section */
 
   .footer {
-    overflow: hidden;
+    /* overflow: hidden; */
+
   }
 
   #footer-div {
       position: relative;
-      bottom: 0;
       background-color: #B4A6AB;
-      height: 200px;
+      /* height: 200px; */
       width: 100%;
       vertical-align: middle;
       text-align: center;
