--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,9 +225,9 @@ h1, h2, h3 {
     text-align: center;
     position: absolute;
     bottom: 0;
-    color: black;
+    color: #150409;
     font-weight: bold;
-    background: rgba(255,255,255,0.5);
+    background: #615055;
     width: 100%;
     text-align: center;
 }
@@ -240,19 +240,6 @@ h1, h2, h3 {
     padding: 0 6px;
     /* float: left;
     width: 24.99999%; */
-}
-  
-@media only screen and (max-width: 700px) {
-    .responsive {
-      width: 49.99999%;
-      margin: 6px 0;
-    }
-}
-  
-@media only screen and (max-width: 500px) {
-    .responsive {
-      width: 100%;
-    }
 }
   
 .clearfix:after {
@@ -307,53 +294,52 @@ input[type=text], input[type=email] {
     font-size: 30px;
     width: 50px;
     text-align: center;
-    text-decoration: none;
+    text-decoration-color: white;
 }
 .fa:hover {
     opacity: 0.7;
-  }
+}
 
-  .fa-facebook {
+.fa-facebook {
     background: #3B5998;
     color: white;
-  }
+}
 
-  .fa-twitter {
+.fa-twitter {
     background: #55ACEE;
     color: white;
-  }
+}
 
-  .fa-instagram {
+.fa-instagram {
     background: #3f729b;
     color: white;
-  }
+}
 
 /* Footer Section */
 
-  .footer {
+.footer {
     /* overflow: hidden; */
-
-  }
-
-  #footer-div {
-      position: relative;
-      background-color: #B4A6AB;
-      /* height: 200px; */
-      width: 100%;
-      vertical-align: middle;
-      text-align: center;
-      padding: 20px;
-      margin: 0 auto;
-      bottom: 0;
-      left: 0;
 }
 
-  .contact {
-      padding: 15px;
-      line-height: 35px;
+#footer-div {
+    position: relative;
+    background-color: #B4A6AB;
+    /* height: 200px; */
+    width: 100%;
+    vertical-align: middle;
+    text-align: center;
+    padding: 20px;
+    margin: 0 auto;
+    bottom: 0;
+    left: 0;
 }
 
-  .footer a {
+.contact {
+    padding: 15px;
+    line-height: 35px;
+}
+
+.footer a {
     text-decoration: none;
     color: #615055;
 }
@@ -362,8 +348,10 @@ input[type=text], input[type=email] {
     color: #4B3742;
 }
 
+/* Responsiveness section */
 
 @media screen and (max-width:800px) {
+    
     #about {
         font-size: 100%;
         height: fit-content;
@@ -379,8 +367,7 @@ input[type=text], input[type=email] {
         float: left;
         margin-left: 30px;
         margin-bottom: 20px;
-        line-height: 25px;
-        
+        line-height: 25px; 
     }
 
     #logo {
@@ -395,13 +382,22 @@ input[type=text], input[type=email] {
         font-size: 85%;
         padding-bottom: 20px;
     }
+
+    .responsive {
+        width: 100%;
+    }
+  
+    #photos {
+          column-count: 2;
+    }
+  
+    .desc {
+          display: none;
+    }
 }
 
-
-
-
-
-@media screen and (max-width:500px) {
+@media screen and (max-width:700px) {
+    
     #logo {
         font-size: 150%;
     }
@@ -409,13 +405,13 @@ input[type=text], input[type=email] {
     #menu-bar {
         font-size: 65%;
         float: left;
-    
     }
 
     #footer-div {
         font-size: 65%;
         padding-bottom: 20px;
     }
+
     .fa {
         padding: 20px;
         padding-bottom: 20px;
@@ -424,10 +420,61 @@ input[type=text], input[type=email] {
         text-align: center;
         text-decoration: none;
     }
+
+    .responsive {
+        width: 100%;
+    }
+  
+    #photos {
+          column-count: 2;
+    }
+  
+    .desc {
+          display: none;
+    }
     
 }
 
+@media screen and (max-width:500px) {
+    
+    #logo {
+        font-size: 150%;
+    }
+
+    #menu-bar {
+        font-size: 65%;
+        float: left;
+    }
+
+    #footer-div {
+        font-size: 65%;
+        padding-bottom: 20px;
+    }
+
+    .fa {
+        padding: 20px;
+        padding-bottom: 20px;
+        font-size: 20px;
+        width: 40px;
+        text-align: center;
+        text-decoration: none;
+    }
+
+    .responsive {
+        width: 100%;
+    }
+  
+    #photos {
+          column-count: 1;
+    }
+  
+    .desc {
+          display: none;
+    }
+}
+
 @media screen and (max-width:320px) {
+    
     #logo {
         font-size: 120%;
     }
@@ -435,7 +482,6 @@ input[type=text], input[type=email] {
     #menu-bar {
         font-size: 45%;
         float: left;
-    
     }
 
     #footer-div {
@@ -451,5 +497,16 @@ input[type=text], input[type=email] {
         text-align: center;
         text-decoration: none;
     }
-    
+
+    .responsive {
+        width: 100%;
+    }
+  
+    #photos {
+        column-count: 1;
+    }
+  
+    .desc {
+        display: none;
+    }
 }
