--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h1, h2, h3 {
 
 #header {
     font: 1em sans-serif;
-    color: color: #150409;;
+    color: #150409;;
 }
 
 #menu-bar {
@@ -142,7 +142,7 @@ h1, h2, h3 {
     padding-top: 50px;
     width: 100%;
     height: 500px;
-    background-color: #CDD5D1;
+    background-color: #C1C2C1;
 }
 
 #skills-box h2 {
@@ -225,7 +225,7 @@ h1, h2, h3 {
     text-align: center;
     position: absolute;
     bottom: 0;
-    color: #150409;
+    color: white;
     font-weight: bold;
     background: #615055;
     width: 100%;
@@ -253,7 +253,7 @@ h1, h2, h3 {
 .signupsec {
     width: 100%;
     height: 600px;
-    background-color: #CDD5D1;
+    background-color: #C1C2C1;
     text-align: center; 
     padding-top: 50px;
 }
@@ -264,11 +264,12 @@ h1, h2, h3 {
 }
 
 .signupbtn {
-    background-color: #E0E5E2;
-    color: #615055;
+    background-color: #b4969b;
+    color: #150409;
     padding: 20px 30px;
     margin: 10px 0;
     border: black;
+    border-radius: 12px;
     width: 20%;
     opacity: 0.7;
 }
